--- a/main_3.html
+++ b/main_3.html
@@ -8,101 +8,102 @@
     <script href="scriptmain_3.js"></script>
 </head>
 <body>
-    <!-- div per contenere tutto il main_3-->
-    <div class="product_recomendation">
-        <!--div per contenere l'intero carosello-->
-        <div class="carousel-container-wrapper">
-            <!--div per contenere la topbar del carosello-->
-            <div class="carousel-topbar">
-                <h2 class="carousel-title">
-                    What others are buying
-                </h2>
-                <!--linea messa solo per migliore visualizzazione dei div-->
-                <hr>
-            </div>
-            <!--div per il carosello effettivo-->
-            <div class="carousel">
-                <!--PRODOTTO 1 card del carosello-->
-                <div class="carousel-card">
-                    <div class="product-image-carousel">
-                        <!--immagine del prodotto-->
-                        <img src="assets\images\dune atreides product.png" alt="immagine prova">
-                        <div class="new-product-tag">
-                            New
+    <main>
+        <!-- div per contenere tutto il main_3-->
+        <div class="product_recomendation">
+            <!--div per contenere l'intero carosello-->
+            <div class="carousel-container-wrapper">
+                <!--div per contenere la topbar del carosello-->
+                <div class="carousel-topbar">
+                    <h2 class="carousel-title">
+                        What others are buying
+                    </h2>
+                    <!--linea messa solo per migliore visualizzazione dei div-->
+                    <hr>
+                </div>
+                <!--div per il carosello effettivo-->
+                <div class="carousel">
+
+                    <!--PRODOTTO 1 card del carosello-->
+                    <div class="carousel-card">
+                        <div class="product-image-carousel">
+                            <!--immagine del prodotto-->
+                            <img src="assets\images\dune atreides product.png" alt="immagine prova">
+                            <div class="new-product-tag">
+                                New
+                            </div>
+                        </div>
+                        <div class="product-leaf-carousel">
+                            <!--descrizione del prodotto-->
+                            <div>
+                                <a href="https://www.lego.com/en-gb/product/dune-atreides-royal-ornithopter-10327" title="Product page">Dune Atreides Royal Ornithopter</a>
+                            </div>
+                            <div class="price-product-carousel">
+                                £ 149,99
+                            </div>
+                            <!--bottone per mettere prodotto nel carello-->
+                            <div class="button-addtobag">
+                                <button>Add to bag</button>
+                            </div>
                         </div>
                     </div>
-                    <div class="product-leaf-carousel">
-                        <!--descrizione del prodotto-->
-                        <div>
-                            <a href="https://www.lego.com/en-gb/product/dune-atreides-royal-ornithopter-10327" title="Product page">Dune Atreides Royal Ornithopter</a>
+
+                    <!--PRODOTTO 2-->
+                    <div class="carousel-card">
+                        <div class="product-image-carousel">
+                            <!--immagine del prodotto-->
+                            <img src="assets\images\sunflowers product.png" alt="immagine prova">
+                            <div class="new-product-tag">
+                                New
+                            </div>
                         </div>
-                        <div class="price-product-carousel">
-                            £ 149,99
+                        <div class="product-leaf-carousel">
+                            <!--descrizione del prodotto-->
+                            <div>
+                                <a href="https://www.lego.com/en-gb/product/dune-atreides-royal-ornithopter-10327" title="Product page">Sunflowers</a>
+                            </div>
+                            <div class="price-product-carousel">
+                                £ 15,99
+                            </div>
+                            <!--bottone per mettere prodotto nel carello-->
+                            <div class="button-addtobag">
+                                <button>Add to bag</button>
+                            </div>
                         </div>
-                        <!--bottone per mettere prodotto nel carello-->
-                        <div class="button-addtobag">
-                            <button>Add to bag</button>
+                    </div>
+
+                    <!--PRODOTTO 3-->
+                    <div class="carousel-card">
+                        <div class="product-image-carousel">
+                            <!--immagine del prodotto-->
+                            <img src="assets\images\lotus flowers product.png" alt="immagine prova">
+                            <div class="new-product-tag">
+                                New
+                            </div>
+                        </div>
+                        <div class="product-leaf-carousel">
+                            <!--descrizione del prodotto-->
+                            <div>
+                                <a href="https://www.lego.com/en-gb/product/dune-atreides-royal-ornithopter-10327" title="Product page">Lotus Flowers</a>
+                            </div>
+                            <div class="price-product-carousel">
+                                £ 25,99
+                            </div>
+                            <!--bottone per mettere prodotto nel carello-->
+                            <div class="button-addtobag">
+                                <button>Add to bag</button>
+                            </div>
                         </div>
                     </div>
                 </div>
 
-                <!--PRODOTTO 2-->
-                <div class="carousel-card">
-                    <div class="product-image-carousel">
-                        <!--immagine del prodotto-->
-                        <img src="assets\images\dune atreides product.png" alt="immagine prova">
-                        <div class="new-product-tag">
-                            New
-                        </div>
-                    </div>
-                    <div class="product-leaf-carousel">
-                        <!--descrizione del prodotto-->
-                        <div>
-                            <a href="https://www.lego.com/en-gb/product/dune-atreides-royal-ornithopter-10327" title="Product page">Dune
-                                Atreides Royal Ornithopter</a>
-                        </div>
-                        <div class="price-product-carousel">
-                            £ 149,99
-                        </div>
-                        <!--bottone per mettere prodotto nel carello-->
-                        <div class="button-addtobag">
-                            <button>Add to bag</button>
-                        </div>
-                    </div>
-                </div>
+                <!--barra di scoriimento per il carosello-->
+                <div class="carousel-scrollbar">
 
-                <!--PRODOTTO 3-->
-                <div class="carousel-card">
-                    <div class="product-image-carousel">
-                        <!--immagine del prodotto-->
-                        <img src="assets\images\dune atreides product.png" alt="immagine prova">
-                        <div class="new-product-tag">
-                            New
-                        </div>
-                    </div>
-                    <div class="product-leaf-carousel">
-                        <!--descrizione del prodotto-->
-                        <div>
-                            <a href="https://www.lego.com/en-gb/product/dune-atreides-royal-ornithopter-10327" title="Product page">Dune
-                                Atreides Royal Ornithopter</a>
-                        </div>
-                        <div class="price-product-carousel">
-                            £ 149,99
-                        </div>
-                        <!--bottone per mettere prodotto nel carello-->
-                        <div class="button-addtobag">
-                            <button>Add to bag</button>
-                        </div>
-                    </div>
                 </div>
-            </div>
-            
-            <!--barra di scoriimento per il carosello-->
-            <div class="carousel-scrollbar">
-
             </div>
         </div>
-    </div>
+    </main>
 </body>
 </html>
 
