--- a/starting-point/indexProva.html
+++ b/starting-point/indexProva.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Progetto LEGO</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styleProva.css" />
   </head>
   <body>
     <header class="header">
