Attuate alcune modifiche

--- a/index.html
+++ b/index.html
@@ -5,5 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lego Home</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav></nav>
+    </header>
+    <main>
+      <section class="m_section1"></section>
+      <section class="m_section2"></section>
+      <section class="m_section3"></section>
+      <section class="m_section4"></section>
+      <section class="m_section5"></section>
+      <section class="m_section6"></section>
+      <section class="m_section7"></section>
+      <section class="m_section8"></section>
+    </main>
+    <footer>
+      <section class="f_section1"></section>
+      <section class="f_section2"></section>
+      <section class="f_section3"></section>
+    </footer>
+  </body>
 </html>
