--- a/main1_test.html
+++ b/main1_test.html
@@ -22,9 +22,7 @@
     <div class="contenitore-generale">
       <div class="contenitore-main1">
         <div class="align-slider-main1">
-          <img
-            src="assets/images/Main1/1914-Homepage-Contingency-202403-Hero-10332-Standard-Large.webp"
-          />
+          <img src="" />
         </div>
         <div class="testoslider-main1">
           <img src="assets/images/Main1/icons-logo-pos-600w.png" />
