--- a/m_section2.html
+++ b/m_section2.html
@@ -13,7 +13,10 @@
       <div class="container">
         <div class="container-card card1">
           <div class="card">
-            <img src="" alt="Immagine 1" />
+            <img
+              src="assets/images/casa di biancaneve per main_2.jpg"
+              alt="Immagine1"
+            />
             <div class="card-body">
               <h3 class="card-title">
                 Il cottage di Biancaneve e i Sette Nani
@@ -28,7 +31,10 @@
         </div>
         <div class="container-card card2">
           <div class="card">
-            <img src="" alt="Immagine 2" />
+            <img
+              src="assets/images/super mario per main_2.png"
+              alt="Immagine2"
+            />
             <div class="card-body">
               <h3 class="card-title">Il 10 marzo è il "Mario Day"</h3>
               <p class="card-text">
@@ -41,7 +47,7 @@
         </div>
         <div class="container-card card3">
           <div class="card">
-            <img src="" alt="Immagine 3" />
+            <img src="assets/images/technic per main 2.jpg" alt="Immagine3" />
             <div class="card-body">
               <h3 class="card-title">Accendi il tuo entusiasmo creativo</h3>
               <p class="card-text">
