--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lego Home</title>
+    <link href="css/style.css" type="text/css" />
+    <link rel="preload" href="https://assets.lego.com/fonts/v3/cera-pro/CeraPro-Regular.woff2" as="font" type="font/woff2" crossorigin="anonymous"/>
+
+    <title data-test="title-tag">Home | LEGO® Shop ufficiale IT </title>
+    <meta property="og:title" content="Home | LEGO® Shop ufficiale IT ">
+
+    <meta name="description" content="Il sito ufficiale del mattoncino con link a prodotti, giochi, video, il LEGO® Shop, la storia di LEGO, creazioni dei fan e il nostro Centro assistenza">
   </head>
   <body>
     <header>
-      <nav></nav>
+
     </header>
     <main>
       <section class="m_section1"></section>
