--- a/m_section2.html
+++ b/m_section2.html
@@ -25,7 +25,7 @@
                 Rievoca dolci ricordi con un nuovo affascinante set basato sul
                 film classico.
               </p>
-              <a href="#"><button>Compra ora</button></a>
+              <a href="#">Compra ora</a>
             </div>
           </div>
         </div>
