--- a/section_1_test.html
+++ b/section_1_test.html
@@ -8,7 +8,7 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="css/style_main1.css" />
+    <link rel="stylesheet" href="css/style_section1.css" />
     <title>Lego Home</title>
   </head>
   <body>
