--- a/section_3_test.html
+++ b/section_3_test.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main_3</title>
-    <link rel="stylesheet" href="stylesmain_3.css">
+    <link rel="stylesheet" href="css\styles_section3.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;0,900;1,300;1,500;1,900&display=swap" rel="stylesheet">
@@ -18,13 +18,13 @@
                 <!--div per contenere l'intero carosello-->
                 <div class="carousel-container-wrapper">
                     <!--div per contenere la topbar del carosello-->
-                    <header class="carousel-topbar">
+                    <div class="carousel-topbar">
                         <h2 class="carousel-title">
                             What others are buying
                         </h2>
                         <!--linea messa solo per migliore visualizzazione dei div-->
                         <hr>
-                    </header>
+                    </div>
                     <!--div per il carosello effettivo-->
                     <div class="carousel">
 
@@ -44,8 +44,8 @@
                                     <p>£ 149,99</p>
                                 </div>
                                 <!--bottone per mettere prodotto nel carello-->
-                                <div class="button-addtobag">
-                                    <button>Add to bag</button>
+                                <div class="container-button">
+                                    <button class="button-addtobag">Add to bag</button>
                                 </div>
                             </div>
                         </div>
@@ -65,8 +65,8 @@
                                     <p>£ 149,99</p>
                                 </div>
                                 <!--bottone per mettere prodotto nel carello-->
-                                <div class="button-addtobag">
-                                    <button>Add to bag</button>
+                                <div class="container-button">
+                                    <button class="button-addtobag">Add to bag</button>
                                 </div>
                             </div>
                         </div>
@@ -87,8 +87,8 @@
                                     <p>£ 149,99</p>
                                 </div>
                                 <!--bottone per mettere prodotto nel carello-->
-                                <div class="button-addtobag">
-                                    <button>Add to bag</button>
+                                <div class="container-button">
+                                    <button class="button-addtobag">Add to bag</button>
                                 </div>
                             </div>
                         </div>
@@ -109,8 +109,8 @@
                                     <p>£ 149,99</p>
                                 </div>
                                 <!--bottone per mettere prodotto nel carello-->
-                                <div class="button-addtobag">
-                                    <button>Add to bag</button>
+                                <div class="container-button">
+                                    <button class="button-addtobag">Add to bag</button>
                                 </div>
                             </div>
                         </div>
@@ -131,8 +131,8 @@
                                     <p>£ 149,99</p>
                                 </div>
                                 <!--bottone per mettere prodotto nel carello-->
-                                <div class="button-addtobag">
-                                    <button>Add to bag</button>
+                                <div class="container-button">
+                                    <button class="button-addtobag">Add to bag</button>
                                 </div>
                             </div>
                         </div>
