--- a/section_6_test.html
+++ b/section_6_test.html
@@ -4,17 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
-      @font-face {
-        font-family: "CeraPRO";
-        src: url("CeraPro-Regular.woff2") format("woff2"),
-          url("CeraPro-Regular.woff2") format("woff");
-      }
-
       * {
         margin: 0;
         padding: 0;
         box-sizing: border-box;
-        font-family: "CeraPro";
+        font-family: sans-serif;
       }
       .container-general_section6 {
         display: flex;
