--- a/section_8_test.html
+++ b/section_8_test.html
@@ -10,11 +10,25 @@
         box-sizing: border-box;
         font-family: sans-serif;
       }
+
       .container {
         width: 80%;
         margin: 0 auto;
         background-color: #330c53;
         color: aliceblue;
+        position: relative;
+      }
+
+      .title {
+        margin-bottom: 10px;
+        padding: 10px;
+        width: 80%;
+      }
+
+      .title-text {
+        margin-top: 10px;
+        font-size: xx-large;
+        width: 80%;
       }
 
       .cards {
@@ -28,7 +42,7 @@
       .card {
         width: 20%;
         margin: 10px;
-        margin-bottom: 40px;
+        margin-bottom: 60px;
       }
 
       .card img {
@@ -42,16 +56,6 @@
         margin-top: 10px;
         margin-bottom: 20px;
       }
-      .title {
-        margin-left: 120px;
-        margin-bottom: 10px;
-        padding: 10px;
-      }
-
-      .title-text {
-        margin-top: 10px;
-        font-size: xx-large;
-      }
 
       .button8 {
         display: block;
@@ -59,6 +63,7 @@
         text-decoration: none;
         color: white;
       }
+
       .button-hover :hover {
         color: white;
         text-decoration: underline;
