--- a/footer_3.html
+++ b/footer_3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lego</title>
-    <link rel="stylesheet" href="footer_3.css">
+    <link rel="stylesheet" href="css/footer_3.css">
 </head>
 <body>
     <div class="contenitore">
