Modificasti section6 e section 2

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <!-- div per contenere la card1-->
                 <div class="container-card card1">
                   <div class="card">
-                    <img src="assets/images/casa di biancaneve per main_2.jpg" alt="Immagine1" height="349" width="460" />
+                    <img class="img-section2" src="assets/images/casa di biancaneve per main_2.jpg" alt="Immagine1" />
                     <div class="card-body">
                       <span class="card-title">
                         Il cottage di Biancaneve e i Sette Nani
@@ -146,7 +146,7 @@
                 <!-- div per contenere la card2-->
                 <div class="container-card card2">
                   <div class="card">
-                    <img src="assets/images/super mario per main_2.png" alt="Immagine2" height="349" width="460" />
+                    <img class="img-section2" src="assets/images/super mario per main_2.png" alt="Immagine2" />
                     <div class="card-body">
                       <span class="card-title">Il 10 marzo è il "Mario Day"</span>
                     </div>
@@ -164,7 +164,7 @@
                 <!-- div per contenere la card3-->
                 <div class="container-card card3">
                   <div class="card">
-                    <img src="assets/images/technic per main 2.jpg" alt="Immagine3" height="349" width="460" />
+                    <img class="img-section2" src="assets/images/technic per main 2.jpg" alt="Immagine3" />
                     <div class="card-body">
                       <span class="card-title">Accendi il tuo entusiasmo creativo</span>
                     </div>
