--- a/section_8_test.html
+++ b/section_8_test.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
-      * {
+      /* * {
         margin: 0;
         padding: 0;
         box-sizing: border-box;
         font-family: sans-serif;
-      }
+      } */
 
-      .container {
+      .container-section8 {
         width: 80%;
         margin: 0 auto;
         background-color: #330c53;
@@ -45,7 +45,7 @@
         margin-bottom: 60px;
       }
 
-      .card img {
+      .img-section8 {
         width: 100%;
         height: auto;
       }
@@ -72,13 +72,14 @@
     <title>Section8_Main</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container-section8">
       <div class="title">
         <h2 class="title-text">So many ways to Play Unstoppable</h2>
       </div>
       <div class="cards">
         <div class="card">
           <img
+            class="img-section8"
             src="assets/images/M_Section7/1915-Girls-2024-Homepage-Content-Block-Standard-42639.jpg"
             alt="Immagine 1"
           />
@@ -90,6 +91,7 @@
         </div>
         <div class="card">
           <img
+            class="img-section8"
             src="assets/images/M_Section7/1915-Girls-2024-Homepage-Content-Block-Standard-76428.jpg"
             alt="Immagine 2"
           />
@@ -103,6 +105,7 @@
         </div>
         <div class="card">
           <img
+            class="img-section8"
             src="assets/images/M_Section7/1915-Girls-2024-Homepage-Content-Block-Standard-77049.jpg"
             alt="Immagine 3"
           />
@@ -114,6 +117,7 @@
         </div>
         <div class="card">
           <img
+            class="img-section8"
             src="assets/images/M_Section7/1915-Girls-2024-Homepage-Content-Block-Standard-71476.jpg"
             alt="Immagine 4"
           />
