--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <h2>I preferiti di questa settimana</h2>
               </div>
               <!--div per contenere tutte le cards-->
-              <div class="container">
+              <div class="container-s2">
                 <!-- div per contenere la card1-->
                 <div class="container-card card1">
                   <div class="card">
@@ -535,13 +535,13 @@
           </section>
         </section>
         <section class="m_section7"></section>
-        <section class="m_section8">
+        <!-- <section class="m_section8">
           <div class="container">
             <div class="title">
               <h2 class="title-text">So many ways to Play Unstoppable</h2>
             </div>
             <div class="cards">
-              <div class="card">
+              <div class="card-section8">
                 <img src="assets/images/M_Section7/1915-Girls-2024-Homepage-Content-Block-Standard-42639.jpg" alt="Immagine 1" />
                 <h3>Storytelling with Friends</h3>
                 <p>Invite fans of LEGO® Friends to meet the newest generation.</p>
@@ -549,7 +549,7 @@
                   <a href="#" class="button8">Shop now > </a>
                 </div>
               </div>
-              <div class="card">
+              <div class="card-section8">
                 <img src="assets/images/M_Section7/1915-Girls-2024-Homepage-Content-Block-Standard-76428.jpg" alt="Immagine 2" />
                 <h3>Making magic</h3>
                 <p>
@@ -559,7 +559,7 @@
                   <a href="#" class="button8">Shop now > </a>
                 </div>
               </div>
-              <div class="card">
+              <div class="card-section8">
                 <img src="assets/images/M_Section7/1915-Girls-2024-Homepage-Content-Block-Standard-77049.jpg" alt="Immagine 3" />
                 <h3>Recreating video games</h3>
                 <p>Invite kids to discover the world of LEGO® Animal Crossing™.</p>
@@ -567,7 +567,7 @@
                   <a href="#" class="button8">Shop now > </a>
                 </div>
               </div>
-              <div class="card">
+              <div class="card-section8">
                 <img src="assets/images/M_Section7/1915-Girls-2024-Homepage-Content-Block-Standard-71476.jpg" alt="Immagine 4" />
                 <h3>Bringing dreams to life</h3>
                 <p>Discover sets inspired by the hit LEGO® DREAMZzz™ TV series.</p>
@@ -577,7 +577,7 @@
               </div>
             </div>
           </div>
-        </section>
+        </section> -->
       </main>
       <footer>
         <section class="f_section1">
