--- a/section_8_test.html
+++ b/section_8_test.html
@@ -77,7 +77,7 @@
         <h2 class="title-text">So many ways to Play Unstoppable</h2>
       </div>
       <div class="cards">
-        <div class="card">
+        <div class="card-section8">
           <img
             class="img-section8"
             src="assets/images/M_Section7/1915-Girls-2024-Homepage-Content-Block-Standard-42639.jpg"
@@ -89,7 +89,7 @@
             <a href="#" class="button8">Shop now > </a>
           </div>
         </div>
-        <div class="card">
+        <div class="card-section8">
           <img
             class="img-section8"
             src="assets/images/M_Section7/1915-Girls-2024-Homepage-Content-Block-Standard-76428.jpg"
@@ -103,7 +103,7 @@
             <a href="#" class="button8">Shop now > </a>
           </div>
         </div>
-        <div class="card">
+        <div class="card-section8">
           <img
             class="img-section8"
             src="assets/images/M_Section7/1915-Girls-2024-Homepage-Content-Block-Standard-77049.jpg"
@@ -115,7 +115,7 @@
             <a href="#" class="button8">Shop now > </a>
           </div>
         </div>
-        <div class="card">
+        <div class="card-section8">
           <img
             class="img-section8"
             src="assets/images/M_Section7/1915-Girls-2024-Homepage-Content-Block-Standard-71476.jpg"
