--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
             </div>
           </div>
         </section>
+
         <section class="m_section2">
           <section class="container-section2">
             <!--section per contenere tutto il main_2-->
@@ -124,61 +125,64 @@
               <!--div per contenere tutte le cards-->
               <div class="container-s2">
                 <!-- div per contenere la card1-->
-                <div class="container-card card1">
+                <a href="#">
+                  <div class="container-card card1">
                   <div class="card">
                     <img class="img-section2" src="assets/images/casa di biancaneve per main_2.jpg" alt="Immagine1" />
-                    <div class="card-body">
-                      <span class="card-title">
+                    <div class="card-body container-h3-s2">
+                      <h3 class="card-title">
                         Il cottage di Biancaneve e i Sette Nani
-                      </span>
+                      </h3>
                     </div>
-                    <div class="card-body">
-                      <span class="card-text">
+                    <div class="card-body container-text-s2">
+                      <p class="card-text">
                         Rievoca dolci ricordi con un nuovo affascinante set basato sul
                         film classico.
-                      </span>
+                      </p>
                     </div>
-                    <div class="card-body">
-                      <a href="#">Compra ora</a>
+                    <div class="card-body container-shop-now2">
+                      <a href="#" class="shop-now2">Shop now > </a>
                     </div>
                   </div>
-                </div>
+                </div></a>
                 <!-- div per contenere la card2-->
-                <div class="container-card card2">
+                <a href="#">
+                  <div class="container-card card2">
                   <div class="card">
                     <img class="img-section2" src="assets/images/super mario per main_2.png" alt="Immagine2" />
-                    <div class="card-body">
-                      <span class="card-title">Il 10 marzo è il "Mario Day"</span>
+                    <div class="card-body container-h3-s2">
+                      <h3 class="card-title">Il 10 marzo è il "Mario Day"</h3>
                     </div>
-                    <div class="card-body">
-                      <span class="card-text">
+                    <div class="card-body container-text-s2">
+                      <p class="card-text">
                         Dai un'occhiata agli sconti e ottieni Doppi punti sui set
                         LEGO® Super Mario™ dal 4/3 all'11/3.*
-                      </span>
+                      </p>
                     </div>
-                    <div class="card-body">
-                      <a href="#">Compra ora</a>
+                    <div class="card-body container-shop-now2">
+                      <a href="#" class="shop-now2">Shop now > </a>
                     </div>
                   </div>
-                </div>
+                </div></a>
                 <!-- div per contenere la card3-->
-                <div class="container-card card3">
+                <a href="#">
+                  <div class="container-card card3">
                   <div class="card">
                     <img class="img-section2" src="assets/images/technic per main 2.jpg" alt="Immagine3" />
-                    <div class="card-body">
-                      <span class="card-title">Accendi il tuo entusiasmo creativo</span>
+                    <div class="card-body container-h3-s2">
+                      <h3 class="card-title">Accendi il tuo entusiasmo creativo</h3>
                     </div>
-                    <div class="card-body">
-                      <span class="card-text">
+                    <div class="card-body container-text-s2">
+                      <p class="card-text">
                         Celebra il mondo degli sport motoristici con i nuovi set LEGO®
                         Icons.
-                      </span>
+                      </p>
                     </div>
-                    <div class="card-body">
-                      <a href="#">Compra ora</a>
+                    <div class="card-body container-shop-now2">
+                      <a href="#" class="shop-now2">Shop now > </a>
                     </div>
                   </div>
-                </div>
+                </div></a>
               </div>
             </section>
           </section>
