Modificata ulteriormente la section2

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                         </p>
                       </div>
                       <div class="card-body container-shop-now2">
-                        <a href="#" class="shop-now2">Shop now > </a>
+                        <a href="#" class="shop-now2 iper-centrale-s2">Shop now > </a>
                       </div>
                     </div>
                   </div>
@@ -165,7 +165,7 @@
                         </p>
                       </div>
                       <div class="card-body container-shop-now2">
-                        <a href="#" class="shop-now2">Shop now > </a>
+                        <a href="#" class="shop-now2 iper-centrale-s2">Shop now > </a>
                       </div>
                     </div>
                   </div>
@@ -185,7 +185,7 @@
                         </p>
                       </div>
                       <div class="card-body container-shop-now2">
-                        <a href="#" class="shop-now2">Shop now > </a>
+                        <a href="#" class="shop-now2 iper-centrale-s2">Shop now > </a>
                       </div>
                     </div>
                   </div>
