--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <section class="main-section2">
               <!--div per contenere il titolo della section2-->
               <div class="title-main-section2">
-                <h2>I preferiti di questa settimana</h2>
+                <h2>This week's top picks</h2>
               </div>
               <!--div per contenere tutte le cards-->
               <div class="container-s2">
