Aggiustati bottoni section6 e aggiunto svg section2

--- a/index.html
+++ b/index.html
@@ -145,7 +145,9 @@
                         </p>
                       </div>
                       <div class="card-body container-shop-now2">
-                        <a href="#" class="shop-now2 iper-centrale-s2">Shop now > </a>
+                        <a href="#" class="shop-now2 iper-centrale-s2">Shop now</a>
+                        <svg width="10" height="13" viewBox="0 0 18 28" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
+                        <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path></svg>
                       </div>
                     </div>
                   </div>
@@ -165,7 +167,9 @@
                         </p>
                       </div>
                       <div class="card-body container-shop-now2">
-                        <a href="#" class="shop-now2 iper-centrale-s2">Shop now > </a>
+                        <a href="#" class="shop-now2 iper-centrale-s2">Shop now</a>
+                        <svg width="10" height="13" viewBox="0 0 18 28" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
+                        <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path></svg>
                       </div>
                     </div>
                   </div>
@@ -185,7 +189,9 @@
                         </p>
                       </div>
                       <div class="card-body container-shop-now2">
-                        <a href="#" class="shop-now2 iper-centrale-s2">Shop now > </a>
+                        <a href="#" class="shop-now2 iper-centrale-s2">Shop now  </a>
+                        <svg width="10" height="13" viewBox="0 0 18 28" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
+                        <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path></svg>
                       </div>
                     </div>
                   </div>
@@ -539,8 +545,8 @@
             <div class="section6_bar">
               <span class="text_bar">Discover endless worlds to create</span>
               <div class="button-section6">
-                <a href="#" class="button6_1">Product</a>
-                <a href="#" class="button6_2">About</a>
+                <a href="#" class="button6">Product</a>
+                <a href="#" class="button6">About</a>
               </div>
             </div>
           </section>
