--- a/index.html
+++ b/index.html
@@ -142,8 +142,7 @@
                     </div>
                     <div class="card-body">
                       <p class="card-text container-text-s2">
-                        Rievoca dolci ricordi con un nuovo affascinante set basato sul
-                        film classico.
+                        Rievoca dolci ricordi con un nuovo affascinante set basato sul film classico.
                       </p>
                     </div>
                     <div class="card-body container-shop-now2">
@@ -555,49 +554,109 @@
         </section>
       </section>
       <section class="m_section7"></section>
-      <!-- <section class="m_section8">
-          <div class="container">
-            <div class="title">
-              <h2 class="title-text">So many ways to Play Unstoppable</h2>
+      <section class="m_section8">
+        <!--SECTION8-->
+        <section class="container-section8">
+          <!--section per contenere tutto il main_2-->
+          <section class="main-section8">
+            <!--div per contenere il titolo della section2-->
+            <div class="title-main-section8">
+              <h2>So many ways to Play Unstoppable</h2>
             </div>
-            <div class="cards">
-              <div class="card-section8">
-                <img src="assets/images/M_Section7/1915-Girls-2024-Homepage-Content-Block-Standard-42639.jpg" alt="Immagine 1" />
-                <h3>Storytelling with Friends</h3>
-                <p>Invite fans of LEGO® Friends to meet the newest generation.</p>
-                <div class="button-hover">
-                  <a href="#" class="button8">Shop now > </a>
+            <!--div per contenere tutte le cards-->
+            <div class="container-s8">
+              <!-- div per contenere la card1-->
+              <a href="#">
+                <div class="container-card8 card1">
+                  <div class="card">
+                    <img class="img-section8" src="assets/images/M_Section7/img1-section8.jpg" alt="Immagine1" />
+                    <div class="card-body">
+                      <h3 class="card-title container-h3-s8">
+                        Storytelling with Friends
+                      </h3>
+                    </div>
+                    <div class="card-body">
+                      <p class="card-text8 container-text-s8">
+                        Invite fans of LEGO® Friends to meet the newest generation.
+                      </p>
+                    </div>
+                    <div class="card-body container-shop-now8">
+                      <a href="#" class="shop-now8 iper-centrale-s8">Shop now</a>
+                        <svg width="10" height="13" viewBox="0 0 18 28" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
+                        <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path></svg>
+                    </div>
+                  </div>
                 </div>
-              </div>
-              <div class="card-section8">
-                <img src="assets/images/M_Section7/1915-Girls-2024-Homepage-Content-Block-Standard-76428.jpg" alt="Immagine 2" />
-                <h3>Making magic</h3>
-                <p>
-                  Charm LEGO® Harry Potter™ fans with sets from the Wizarding World.
-                </p>
-                <div class="button-hover">
-                  <a href="#" class="button8">Shop now > </a>
+              </a>
+              <a href="#">
+                <div class="container-card8 card1">
+                  <div class="card">
+                    <img class="img-section8" src="assets/images/M_Section7/img2-section8.jpg" alt="Immagine1" />
+                    <div class="card-body">
+                      <h3 class="card-title container-h3-s8">
+                        Making magic
+                      </h3>
+                    </div>
+                    <div class="card-body">
+                      <p class="card-text8 container-text-s8">
+                        Charm LEGO® Harry Potter™ fans with sets from the Wizarding World.
+                      </p>
+                    </div>
+                    <div class="card-body container-shop-now8">
+                      <a href="#" class="shop-now8 iper-centrale-s8">Shop now</a>
+                        <svg width="10" height="13" viewBox="0 0 18 28" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
+                        <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path></svg>
+                    </div>
+                  </div>
                 </div>
-              </div>
-              <div class="card-section8">
-                <img src="assets/images/M_Section7/1915-Girls-2024-Homepage-Content-Block-Standard-77049.jpg" alt="Immagine 3" />
-                <h3>Recreating video games</h3>
-                <p>Invite kids to discover the world of LEGO® Animal Crossing™.</p>
-                <div class="button-hover">
-                  <a href="#" class="button8">Shop now > </a>
+              </a>
+              <!-- div per contenere la card2-->
+              <a href="#">
+                <div class="container-card8 card2">
+                  <div class="card">
+                    <img class="img-section2" src="assets/images/M_Section7/img3-section8.jpg" alt="Immagine2" />
+                    <div class="card-body">
+                      <h3 class="card-title container-h3-s8">Recreating video games"</h3>
+                    </div>
+                    <div class="card-body">
+                      <p class="card-text8 container-text-s8">
+                        Invite kids to discover the world of LEGO® Animal Crossing™.
+                      </p>
+                    </div>
+                    <div class="card-body container-shop-now8">
+                      <a href="#" class="shop-now8 iper-centrale-s8">Shop now</a>
+                        <svg width="10" height="13" viewBox="0 0 18 28" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
+                        <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path></svg>
+                    </div>
+                  </div>
                 </div>
-              </div>
-              <div class="card-section8">
-                <img src="assets/images/M_Section7/1915-Girls-2024-Homepage-Content-Block-Standard-71476.jpg" alt="Immagine 4" />
-                <h3>Bringing dreams to life</h3>
-                <p>Discover sets inspired by the hit LEGO® DREAMZzz™ TV series.</p>
-                <div class="button-hover">
-                  <a href="#" class="button8">Shop now > </a>
+              </a>
+              <!-- div per contenere la card3-->
+              <a href="#">
+                <div class="container-card8 card3">
+                  <div class="card">
+                    <img class="img-section8" src="assets/images/M_Section7/img4-section8.jpg" alt="Immagine3" />
+                    <div class="card-body">
+                      <h3 class="card-title container-h3-s8">Bringing dreams to life</h3>
+                    </div>
+                    <div class="card-body">
+                      <p class="card-text8 container-text-s8">
+                        Discover sets inspired by the hit LEGO® DREAMZzz™ TV series.
+                      </p>
+                    </div>
+                    <div class="card-body container-shop-now8">
+                      <a href="#" class="shop-now8 iper-centrale-s8">Shop now  </a>
+                        <svg width="10" height="13" viewBox="0 0 18 28" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
+                        <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path></svg>
+                    </div>
+                  </div>
                 </div>
-              </div>
+              </a>
             </div>
-          </div>
-        </section> -->
+          </section>
+        </section>
+      </section>
+
     </main>
     <footer>
       <section class="f_section1">
