Cambiati testi in inglese section2

--- a/index.html
+++ b/index.html
@@ -137,12 +137,13 @@
                     <img class="img-section2" src="assets/images/casa di biancaneve per main_2.jpg" alt="Immagine1" />
                     <div class="card-body">
                       <h3 class="card-title container-h3-s2">
-                        Il cottage di Biancaneve e i Sette Nani
+                        Snow White and the Seven Dwarfs' Cottage
                       </h3>
                     </div>
                     <div class="card-body">
                       <p class="card-text container-text-s2">
-                        Rievoca dolci ricordi con un nuovo affascinante set basato sul film classico.
+                        Relive sweet memories with a charming new set based on the
+                        classic film.
                       </p>
                     </div>
                     <div class="card-body container-shop-now2">
@@ -159,15 +160,15 @@
                   <div class="card">
                     <img class="img-section2" src="assets/images/super mario per main_2.png" alt="Immagine2" />
                     <div class="card-body">
-                      <h3 class="card-title container-h3-s2">Il 10 marzo è il "Mario Day"</h3>
+                      <h3 class="card-title container-h3-s2">10 March is "MAR10 Day"</h3>
                     </div>
                     <div class="card-body">
                       <p class="card-text container-text-s2">
-                        Dai un'occhiata agli sconti e ottieni Doppi punti sui set
-                        LEGO® Super Mario™ dal 4/3 all'11/3.*
+                        Check out our sale and get double points on LEGO® Super
+                        Mario™ sets, 04/03-11/03.*
                       </p>
                     </div>
-                    <div class="card-body container-shop-now2">
+                    <div class="card-body container-shop-now2 snow2-2">
                       <a href="#" class="shop-now2 iper-centrale-s2">Shop now</a>
                         <svg width="10" height="13" viewBox="0 0 18 28" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
                         <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path></svg>
@@ -181,16 +182,16 @@
                   <div class="card">
                     <img class="img-section2" src="assets/images/technic per main 2.jpg" alt="Immagine3" />
                     <div class="card-body">
-                      <h3 class="card-title container-h3-s2">Accendi il tuo entusiasmo creativo</h3>
+                      <h3 class="card-title container-h3-s2">Get into your creative zone</h3>
                     </div>
                     <div class="card-body">
                       <p class="card-text container-text-s2">
-                        Celebra il mondo degli sport motoristici con i nuovi set LEGO®
-                        Icons.
+                        New LEGO® Technic sets feature authentic details for racing 
+                        fans.
                       </p>
                     </div>
-                    <div class="card-body container-shop-now2">
-                      <a href="#" class="shop-now2 iper-centrale-s2">Shop now  </a>
+                    <div class="card-body container-shop-now2 snow2-3">
+                      <a href="#" class="shop-now2 iper-centrale-s2 ">Shop now  </a>
                         <svg width="10" height="13" viewBox="0 0 18 28" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
                         <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path></svg>
                     </div>
