--- a/index.html
+++ b/index.html
@@ -554,7 +554,31 @@
           </div>
         </section>
       </section>
-      <section class="m_section7"></section>
+      <section class="m_section7">
+        <div class="contenitore-generale6">
+          <div class="contenitore-section6">
+            <div class="img-section6">
+              <img
+                src="assets/images/M_Section5/Screenshot 2024-03-14 alle 23.07.53.png" class="img6"
+              />
+            </div>
+            <div class="testo-section6">
+              <h1>Discover endless worlds of wonder</h1>
+              <p>Watch them Play Unstoppable and inspire their creativity
+                without limits.</p>
+                <div class="iper-shop-now6">
+                  <div class="shop-now6">
+                    <a href="#" class="iper6">Shop now ></a>
+                  </div>
+                  <div class="shop-now6">
+                    <a href="#" class="iper6">Learn more ></a>
+                  </div>
+                </div>
+            </div>
+          </div>
+        </div>
+       
+      </section>
       <section class="m_section8">
         <!--SECTION8-->
         <section class="container-section8">
