Aggiunta immagine di separazione tra la section 8 e la 9

--- a/index.html
+++ b/index.html
@@ -681,6 +681,14 @@
           </section>
         </section>
       </section>
+      <section class="m-section9-imgbk">
+        <div class="cntr-imgbk9">
+          <img src="assets/images/M_Section8/Divisore-section8-9.webp" alt="Divisore tra sezione 8 e 9" class="imgbk9">
+        </div>
+      </section>
+      <section class="m-section9">
+
+      </section>
 
     </main>
     <footer>
