--- a/index.html
+++ b/index.html
@@ -687,7 +687,105 @@
         </div>
       </section>
       <section class="m-section9">
-
+        <section class="container-section9">
+          <!--section per contenere tutto il main_2-->
+          <section class="main-section9">
+            <!--div per contenere il titolo della section2-->
+            <div class="title-main-section9">
+              <h2>So many ways to Play Unstoppable</h2>
+            </div>
+            <!--div per contenere tutte le cards-->
+            <div class="container-s9">
+              <!-- div per contenere la card1-->
+              <a href="#">
+                <div class="container-card9 card1">
+                  <div class="card">
+                    <img class="img-section9" src="assets/images/M_Section9/img1-section9.jpg" alt="Immagine1" />
+                    <div class="card-body">
+                      <h3 class="card-title container-h3-s9">
+                        Storytelling with Friends
+                      </h3>
+                    </div>
+                    <div class="card-body">
+                      <p class="card-text9 container-text-s9">
+                        Invite fans of LEGO® Friends to meet the newest generation.
+                      </p>
+                    </div>
+                    <div class="card-body container-shop-now9">
+                      <a href="#" class="shop-now9 iper-centrale-s9">Shop now</a>
+                        <svg width="10" height="13" viewBox="0 0 18 28" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
+                        <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path></svg>
+                    </div>
+                  </div>
+                </div>
+              </a>
+              <a href="#">
+                <div class="container-card9 card1">
+                  <div class="card">
+                    <img class="img-section9" src="assets/images/M_Section9/img2-section9.jpg" alt="Immagine1" />
+                    <div class="card-body">
+                      <h3 class="card-title container-h3-s9">
+                        Making magic
+                      </h3>
+                    </div>
+                    <div class="card-body">
+                      <p class="card-text9 container-text-s9">
+                        Charm LEGO® Harry Potter™ fans with sets from the Wizarding World.
+                      </p>
+                    </div>
+                    <div class="card-body container-shop-now9">
+                      <a href="#" class="shop-now9 iper-centrale-s9">Shop now</a>
+                        <svg width="10" height="13" viewBox="0 0 18 28" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
+                        <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path></svg>
+                    </div>
+                  </div>
+                </div>
+              </a>
+              <!-- div per contenere la card2-->
+              <a href="#">
+                <div class="container-card9 card2">
+                  <div class="card">
+                    <img class="img-section9" src="assets/images/M_Section9/img3-section9.jpg" alt="Immagine2" />
+                    <div class="card-body">
+                      <h3 class="card-title container-h3-s8">Recreating video games"</h3>
+                    </div>
+                    <div class="card-body">
+                      <p class="card-text9 container-text-s9">
+                        Invite kids to discover the world of LEGO® Animal Crossing™.
+                      </p>
+                    </div>
+                    <div class="card-body container-shop-now9">
+                      <a href="#" class="shop-now9 iper-centrale-s9">Shop now</a>
+                        <svg width="10" height="13" viewBox="0 0 18 28" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
+                        <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path></svg>
+                    </div>
+                  </div>
+                </div>
+              </a>
+              <!-- div per contenere la card3-->
+              <a href="#">
+                <div class="container-card9 card3">
+                  <div class="card">
+                    <img class="img-section9" src="assets/images/M_Section9/img4-section9.jpg" alt="Immagine3" />
+                    <div class="card-body">
+                      <h3 class="card-title container-h3-s9">Bringing dreams to life</h3>
+                    </div>
+                    <div class="card-body">
+                      <p class="card-text9 container-text-s9">
+                        Discover sets inspired by the hit LEGO® DREAMZzz™ TV series.
+                      </p>
+                    </div>
+                    <div class="card-body container-shop-now9">
+                      <a href="#" class="shop-now9 iper-centrale-s9">Shop now  </a>
+                        <svg width="10" height="13" viewBox="0 0 18 28" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
+                        <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path></svg>
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+          </section>
+        </section>
       </section>
 
     </main>
