--- a/index.html
+++ b/index.html
@@ -703,16 +703,16 @@
                     <img class="img-section9" src="assets/images/M_Section9/img1-section9.jpg" alt="Immagine1" />
                     <div class="card-body">
                       <h3 class="card-title container-h3-s9">
-                        Storytelling with Friends
+                        How to make your own family tree
                       </h3>
                     </div>
                     <div class="card-body">
                       <p class="card-text9 container-text-s9">
-                        Invite fans of LEGO® Friends to meet the newest generation.
+                        A step-by-step guide on building your own family tree with our latest LEGO® Ideas set...
                       </p>
                     </div>
                     <div class="card-body container-shop-now9">
-                      <a href="#" class="shop-now9 iper-centrale-s9">Shop now</a>
+                      <a href="#" class="shop-now9 iper-centrale-s9">Read more</a>
                         <svg width="10" height="13" viewBox="0 0 18 28" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
                         <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path></svg>
                     </div>
@@ -725,16 +725,16 @@
                     <img class="img-section9" src="assets/images/M_Section9/img2-section9.jpg" alt="Immagine1" />
                     <div class="card-body">
                       <h3 class="card-title container-h3-s9">
-                        Making magic
+                        How to Encourage Collaboration in Kids Through Cooperative Play
                       </h3>
                     </div>
                     <div class="card-body">
                       <p class="card-text9 container-text-s9">
-                        Charm LEGO® Harry Potter™ fans with sets from the Wizarding World.
+                        Find out more about the importance of collaborative play and how cooperative skills can help your child in later life.
                       </p>
                     </div>
                     <div class="card-body container-shop-now9">
-                      <a href="#" class="shop-now9 iper-centrale-s9">Shop now</a>
+                      <a href="#" class="shop-now9 iper-centrale-s9">Read more</a>
                         <svg width="10" height="13" viewBox="0 0 18 28" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
                         <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path></svg>
                     </div>
@@ -747,15 +747,15 @@
                   <div class="card">
                     <img class="img-section9" src="assets/images/M_Section9/img3-section9.jpg" alt="Immagine2" />
                     <div class="card-body">
-                      <h3 class="card-title container-h3-s8">Recreating video games"</h3>
+                      <h3 class="card-title container-h3-s8">The Best LEGO® Easter Basket Ideas</h3>
                     </div>
                     <div class="card-body">
                       <p class="card-text9 container-text-s9">
-                        Invite kids to discover the world of LEGO® Animal Crossing™.
+                        For a surprise that's even sweeter than chocolate, fill your loved ones' Easter baskets with LEGO® gifts they can enjoy all year round.
                       </p>
                     </div>
                     <div class="card-body container-shop-now9">
-                      <a href="#" class="shop-now9 iper-centrale-s9">Shop now</a>
+                      <a href="#" class="shop-now9 iper-centrale-s9">Read more</a>
                         <svg width="10" height="13" viewBox="0 0 18 28" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
                         <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path></svg>
                     </div>
@@ -768,15 +768,15 @@
                   <div class="card">
                     <img class="img-section9" src="assets/images/M_Section9/img4-section9.jpg" alt="Immagine3" />
                     <div class="card-body">
-                      <h3 class="card-title container-h3-s9">Bringing dreams to life</h3>
+                      <h3 class="card-title container-h3-s9">11 Best LEGO® Sets for Adults 2024</h3>
                     </div>
                     <div class="card-body">
                       <p class="card-text9 container-text-s9">
-                        Discover sets inspired by the hit LEGO® DREAMZzz™ TV series.
+                        There's something for everyone in our must-have LEGO® sets for adults in 2024
                       </p>
                     </div>
                     <div class="card-body container-shop-now9">
-                      <a href="#" class="shop-now9 iper-centrale-s9">Shop now  </a>
+                      <a href="#" class="shop-now9 iper-centrale-s9">Read more</a>
                         <svg width="10" height="13" viewBox="0 0 18 28" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
                         <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path></svg>
                     </div>
