Aggiustata section8 e footer1

--- a/index.html
+++ b/index.html
@@ -701,17 +701,17 @@
                 <div class="container-card9 card1">
                   <div class="card">
                     <img class="img-section9" src="assets/images/M_Section9/img1-section9.jpg" alt="Immagine1" />
-                    <div class="card-body">
+                    <div class="card-body9">
                       <h3 class="card-title container-h3-s9">
                         How to make your own family tree
                       </h3>
                     </div>
-                    <div class="card-body">
+                    <div class="card-body9">
                       <p class="card-text9 container-text-s9">
                         A step-by-step guide on building your own family tree with our latest LEGO® Ideas set...
                       </p>
                     </div>
-                    <div class="card-body container-shop-now9">
+                    <div class="card-body9 container-shop-now9">
                       <a href="#" class="shop-now9 iper-centrale-s9">Read more</a>
                         <svg width="10" height="13" viewBox="0 0 18 28" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
                         <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path></svg>
@@ -723,17 +723,17 @@
                 <div class="container-card9 card1">
                   <div class="card">
                     <img class="img-section9" src="assets/images/M_Section9/img2-section9.jpg" alt="Immagine1" />
-                    <div class="card-body">
+                    <div class="card-body9">
                       <h3 class="card-title container-h3-s9">
                         How to Encourage Collaboration in Kids Through Cooperative Play
                       </h3>
                     </div>
-                    <div class="card-body">
+                    <div class="card-body9">
                       <p class="card-text9 container-text-s9">
                         Find out more about the importance of collaborative play and how cooperative skills can help your child in later life.
                       </p>
                     </div>
-                    <div class="card-body container-shop-now9">
+                    <div class="card-body9 container-shop-now9">
                       <a href="#" class="shop-now9 iper-centrale-s9">Read more</a>
                         <svg width="10" height="13" viewBox="0 0 18 28" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
                         <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path></svg>
@@ -746,15 +746,15 @@
                 <div class="container-card9 card2">
                   <div class="card">
                     <img class="img-section9" src="assets/images/M_Section9/img3-section9.jpg" alt="Immagine2" />
-                    <div class="card-body">
+                    <div class="card-body9">
                       <h3 class="card-title container-h3-s8">The Best LEGO® Easter Basket Ideas</h3>
                     </div>
-                    <div class="card-body">
+                    <div class="card-body9">
                       <p class="card-text9 container-text-s9">
                         For a surprise that's even sweeter than chocolate, fill your loved ones' Easter baskets with LEGO® gifts they can enjoy all year round.
                       </p>
                     </div>
-                    <div class="card-body container-shop-now9">
+                    <div class="card-body9 container-shop-now9">
                       <a href="#" class="shop-now9 iper-centrale-s9">Read more</a>
                         <svg width="10" height="13" viewBox="0 0 18 28" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
                         <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path></svg>
@@ -767,15 +767,15 @@
                 <div class="container-card9 card3">
                   <div class="card">
                     <img class="img-section9" src="assets/images/M_Section9/img4-section9.jpg" alt="Immagine3" />
-                    <div class="card-body">
+                    <div class="card-body9">
                       <h3 class="card-title container-h3-s9">11 Best LEGO® Sets for Adults 2024</h3>
                     </div>
-                    <div class="card-body">
+                    <div class="card-body9">
                       <p class="card-text9 container-text-s9">
                         There's something for everyone in our must-have LEGO® sets for adults in 2024
                       </p>
                     </div>
-                    <div class="card-body container-shop-now9">
+                    <div class="card-body9 container-shop-now9">
                       <a href="#" class="shop-now9 iper-centrale-s9">Read more</a>
                         <svg width="10" height="13" viewBox="0 0 18 28" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" class="Icon__StyledSVG-lm07h6-0 gxbFIO Chevronstyles__ChevronIcon-sc-1qql32m-0 cEWHhy CardContentstyles__StyledChevron-sc-18sd0hf-13 esQNuC">
                         <path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path></svg>
