Aggiunta icona nell'head

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
   <title data-test="title-tag">Home | LEGO® Shop ufficiale IT </title>
   <meta property="og:title" content="Home | LEGO® Shop ufficiale IT ">
+  <link rel="icon" href="assets/images/Loghi/lego.ico" type="image/x-icon">
 
   <meta name="description"
     content="Il sito ufficiale del mattoncino con link a prodotti, giochi, video, il LEGO® Shop, la storia di LEGO, creazioni dei fan e il nostro Centro assistenza">
