Modificata freccia nei bottoni della section7

--- a/index.html
+++ b/index.html
@@ -567,10 +567,10 @@
                 without limits.</p>
               <div class="iper-shop-now6">
                 <div class="shop-now6">
-                  <a href="#" class="iper6">Shop now ></a>
+                  <a href="#" class="iper6">Shop now <span class="freccia-s1">&#10095;</span></a>
                 </div>
                 <div class="shop-now6">
-                  <a href="#" class="iper6">Learn more ></a>
+                  <a href="#" class="iper6">Learn more <span class="freccia-s1">&#10095;</span></a>
                 </div>
               </div>
             </div>
