Aggiunto svg al button-area-giochi e fixati alcuni dettagli del button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
       <section id="nav-container">
         <div class="navbar">
           <div class="area-giochi">
-            <a href="https://kids.lego.com/it-it/play" class="button-area-giochi"><span>&#8592;</span> Area giochi</a>
+            <a href="https://kids.lego.com/it-it/play" class="button-area-giochi"><svg width="15" height="16" viewBox="0 0 37 16" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" class="Icon__StyledSVG-lm07h6-0 SkYtC UtilityBarstyles__KidsIcon-sc-1uwh8t8-2 fZmJyP" style="transform: scaleX(-1);" >
+              <path fill="currentColor" d="M29.493.597l.095.084 6.535 6.54a1 1 0 01.083 1.319l-.083.094-6.535 6.54a1 1 0 01-1.498-1.32l.083-.094 4.83-4.834-31.908.001A1 1 0 01.98 6.934l.116-.007h31.907l-4.83-4.833a1 1 0 01-.082-1.32l.083-.094a1 1 0 011.32-.083z"></path>
+            </svg>
+            AREA GIOCHI</a>
           </div>
           <div class="mar10-button-lr">
             <div class="l-btn-nav-controls">
