Aggiustata sezione 6, aggiunti svg e cambiato colore del font

--- a/index.html
+++ b/index.html
@@ -1325,10 +1325,10 @@
                   without limits.</p>
                 <div class="iper-shop-now6">
                   <div class="shop-now6">
-                    <a href="#" class="iper6">Shop now ></a>
+                    <a href="#" class="iper6">Shop now <svg width="16" height="16" viewBox="0 0 18 28" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" class="Icon__StyledSVG-lm07h6-0 kFGAmn Chevronstyles__ChevronIcon-sc-1qql32m-0 gxjmBc GlobalBannerstyles__ControlIcon-adnc4-6 dzgWcn"><path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path></svg> </a>
                   </div>
                   <div class="shop-now6">
-                    <a href="#" class="iper6">Learn more ></a>
+                    <a href="#" class="iper6">Learn more <svg width="16" height="16" viewBox="0 0 18 28" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" class="Icon__StyledSVG-lm07h6-0 kFGAmn Chevronstyles__ChevronIcon-sc-1qql32m-0 gxjmBc GlobalBannerstyles__ControlIcon-adnc4-6 dzgWcn"><path d="M1.825 28L18 14 1.825 0 0 1.715 14.196 14 0 26.285z" fill="currentColor"></path></svg> </a>
                   </div>
                 </div>
               </div>
